Minor edits to App.js and css

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,7 @@
-.Header {
+.menu-icon {
   font-weight: bold;
 }
 
-.Content {
+.content {
   text-align: center;
-}
-
-.Footer {
-  font-style: italic;
 }
