--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-@font-face {
-  font-family: 'league_monosemibold';
-  src: url('fonts/leaguemono-semibold-webfont.woff2') format('woff2'),
-       url('fonts/leaguemono-semibold-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
 body {
   background: linear-gradient(135deg, rgba(0,10,36,1) 11%, rgba(9,36,121,1) 47%, rgba(154,0,255,1) 100%);
   height: 100vh;
@@ -14,17 +6,26 @@ body {
   font-size: large;
 }
 
-.menu {
-  padding-left: 20px;
-  padding-top: 20px;
-  font-size: 41px;
-}
-
 .content {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 80vh;
+}
+
+@font-face {
+  font-family: 'league_monosemibold';
+  src: url('fonts/leaguemono-semibold-webfont.woff2') format('woff2'),
+       url('fonts/leaguemono-semibold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.menu-icon-wrapper {
+  cursor: pointer;
+  padding-left: 20px;
+  padding-top: 20px;
+  font-size: 41px;
 }
 
 .menu-icon:focus {outline: 0}
