--- a/src/landing/Landing.css
+++ b/src/landing/Landing.css
@@ -30,6 +30,7 @@ p {
 }
 
 .button {
+  cursor: pointer;
   padding: 5px;
   margin-left: 15px;
   margin-right: 15px;
@@ -42,3 +43,5 @@ p {
   border-radius: 6px;
   box-shadow: 1px 1px 3px 2px #14104A;
 }
+
+.button:focus {outline: 0}
