Made basic menu work for homepage

--- a/src/other/Homepage.css
+++ b/src/other/Homepage.css
@@ -4,13 +4,12 @@
 }
 
 .bundle-notifications {
-  margin-bottom: 15px;
-  margin-top: 0px;
+  margin-bottom: 10vh;
+  margin-top: 15px;
 }
 
 .forum-notifications {
-  margin-bottom: 50px;
-  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .notifications {
