--- a/src/other/Menus.css
+++ b/src/other/Menus.css
@@ -9,21 +9,26 @@ h3 {
   width: 60vh;
 }
 
+.landing-options {
+  margin: 13vh;
+}
+
+.link {cursor: pointer}
+
 .main-menu {
-  height: 65vh;
-  width: 65vh;
+  height: 72vh;
+  margin-top: 20vh;
+  width: 72vh;
+}
+
+.main-options {
+  margin: 13vh;
 }
 
 .menu {
   background: linear-gradient(135deg, rgba(36,0,29,1) 0%, rgba(65,103,215,1) 0%, rgba(157,65,217,1) 100%);
   box-shadow: 1px 1px 8px 4px #14104A;
   font-size: x-large;
-}
-
-.link {cursor: pointer}
-
-.options {
-  margin: 13vh;
 }
 
 p {
