--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,37 @@ body {
   background: linear-gradient(135deg, rgba(0,10,36,1) 11%, rgba(9,36,121,1) 47%, rgba(154,0,255,1) 100%);
   color: white;
   font-family: 'league_monosemibold';
-  font-size: large;
   height: 100vh;
+  width: 100vw;
 }
 
+.button {
+  background-color: #AA19B0;
+  border: none;
+  border-radius: 6px;
+  box-shadow: 1px 1px 3px 2px #14104A;
+  color: white;
+  cursor: pointer;
+  font-family: 'league_monosemibold';
+  font-size: medium;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 5px;
+  width: 25vh;
+}
+
+.button:focus {outline: 0}
+
 .content {
+  border-style: solid;
+  height: 97vh;
+  margin-right: 5vw;
+  width: 90vw;
+}
+
+.flex {
   align-items: center;
   display: flex;
-  height: 80vh;
   justify-content: center;
 }
 
@@ -21,10 +44,26 @@ body {
        url('fonts/leaguemono-semibold-webfont.woff') format('woff');
 }
 
-.menu-icon:focus {outline: 0}
+.link {cursor: pointer}
 
-.menu-icon-wrapper {
-  font-size: 41px;
-  padding-left: 20px;
-  padding-top: 20px;
+.main-container {
+  border-style: solid;
+  height: 99vh;
+  width: 99vw;
 }
+
+.menu-container {
+  border-style: solid;
+  font-size: 41px;
+  height: 97vh;
+  width: 5vw;
+}
+
+.menu-icon {
+  align-self: flex-start;
+  margin-left: 1vw;
+  margin-right: 1vw;
+  margin-top: 2vw;
+}
+
+.menu-icon:focus {outline: 0}
