--- a/src/other/Homepage.css
+++ b/src/other/Homepage.css
@@ -5,19 +5,16 @@
 
 .bundle-notifications {
   margin-bottom: 10vh;
-  margin-top: 15px;
+  margin-top: 1vh;
 }
 
 .forum-notifications {
-  margin-bottom: 15px;
+  margin-bottom: 3vh;
 }
 
 .notifications {
-  align-items: center;
-  display: flex;
   flex-direction: column;
   height: 45vh;
-  justify-content: center;
   margin-left: 10vh;
 }
 
