--- a/src/other/Menus.css
+++ b/src/other/Menus.css
@@ -26,6 +26,7 @@ h3 {
   background: linear-gradient(135deg, rgba(36,0,29,1) 0%, rgba(65,103,215,1) 0%, rgba(157,65,217,1) 100%);
   box-shadow: 1px 1px 8px 4px #14104A;
   font-size: x-large;
+  /* padding-left: 5vw; */
 }
 
 p {
